fix(PreviewBox): fix overflow issues

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,6 +12,9 @@
     --secondary: 240 4% 95%;
     --accent: 240 4% 95%;
     --ring: 240 3% 87%;
+
+    scrollbar-color: #555 #101010 !important;
+    scrollbar-width: 4px !important;
   }
   .dark {
     --foreground: 0 0% 98%;
@@ -22,6 +25,9 @@
     --secondary: 240 4% 18%;
     --accent: 240 4% 15%;
     --ring: 240 6% 23%;
+
+    scrollbar-color: #555 #101010 !important;
+    scrollbar-width: 4px !important;
   }
 }
 
@@ -42,4 +48,26 @@ pre {
   pre {
     font-size: 16px;
   }
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: #38383838;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #555;
+  border-radius: 999px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #888;
+}
+
+::-webkit-scrollbar-corner {
+  background: rgba(0, 0, 0, 0);
 }
